--- a/ui_file/Model2SAS_UI.ui
+++ b/ui_file/Model2SAS_UI.ui
@@ -10,6 +10,12 @@
     <height>717</height>
    </rect>
   </property>
+  <property name="font">
+   <font>
+    <family>Arial</family>
+    <pointsize>11</pointsize>
+   </font>
+  </property>
   <property name="windowTitle">
    <string>MainWindow</string>
   </property>
@@ -31,18 +37,15 @@
          </property>
          <widget class="QWidget" name="tab">
           <attribute name="title">
-           <string>from stl file</string>
+           <string>From STL File</string>
           </attribute>
           <layout class="QGridLayout" name="gridLayout">
            <item row="0" column="0">
             <widget class="QGroupBox" name="groupBox_control">
              <property name="title">
-              <string>Choose .stl file</string>
+              <string>Choose .stl File</string>
              </property>
              <layout class="QGridLayout" name="gridLayout_2">
-              <item row="0" column="0">
-               <widget class="QLineEdit" name="lineEdit_stlFile"/>
-              </item>
               <item row="0" column="1">
                <widget class="QPushButton" name="pushButton_browseStlFile">
                 <property name="text">
@@ -50,15 +53,18 @@
                 </property>
                </widget>
               </item>
-              <item row="1" column="0">
-               <widget class="QLabel" name="label">
-                <property name="text">
-                 <string>stl model view</string>
-                </property>
-               </widget>
+              <item row="0" column="0">
+               <widget class="QLineEdit" name="lineEdit_stlFile"/>
               </item>
               <item row="2" column="0" colspan="2">
                <widget class="QGraphicsView" name="graphicsView_stlModel"/>
+              </item>
+              <item row="1" column="0">
+               <widget class="QLabel" name="label">
+                <property name="text">
+                 <string>stl Model View</string>
+                </property>
+               </widget>
               </item>
              </layout>
             </widget>
@@ -67,7 +73,7 @@
          </widget>
          <widget class="QWidget" name="tab_2">
           <attribute name="title">
-           <string>from math description</string>
+           <string>From Math Description</string>
           </attribute>
           <layout class="QGridLayout" name="gridLayout_4">
            <item row="0" column="0">
@@ -103,6 +109,7 @@
                 <property name="font">
                  <font>
                   <family>Courier</family>
+                  <pointsize>11</pointsize>
                  </font>
                 </property>
                </widget>
@@ -119,21 +126,28 @@
          <property name="title">
           <string>Control</string>
          </property>
-         <layout class="QGridLayout" name="gridLayout_7">
+         <layout class="QGridLayout" name="gridLayout_7" columnstretch="0,0,0,0">
+          <item row="1" column="3">
+           <widget class="QPushButton" name="pushButton_chooseCrysolPath">
+            <property name="text">
+             <string>Choose crysol.exe</string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QLineEdit" name="lineEdit_interval"/>
+          </item>
+          <item row="0" column="3">
+           <widget class="QPushButton" name="pushButton_genPointsInModel">
+            <property name="text">
+             <string>Generate points model</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>points interval = </string>
-            </property>
-           </widget>
-          </item>
-          <item row="0" column="1">
-           <widget class="QLineEdit" name="lineEdit_interval"/>
-          </item>
-          <item row="0" column="2">
-           <widget class="QPushButton" name="pushButton_genPointsInModel">
-            <property name="text">
-             <string>Generate points model</string>
             </property>
            </widget>
           </item>
@@ -147,21 +161,48 @@
             </property>
            </widget>
           </item>
-          <item row="1" column="1">
+          <item row="1" column="1" colspan="2">
            <widget class="QLabel" name="label_crysolPath">
             <property name="text">
              <string>choose Crysol path</string>
             </property>
            </widget>
           </item>
-          <item row="1" column="2">
-           <widget class="QPushButton" name="pushButton_chooseCrysolPath">
+          <item row="2" column="0">
+           <widget class="QLabel" name="label_2">
             <property name="text">
-             <string>Choose crysol.exe</string>
+             <string>Q_max = </string>
             </property>
            </widget>
           </item>
-          <item row="2" column="0">
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="lineEdit_Qmax"/>
+          </item>
+          <item row="4" column="0">
+           <widget class="QLabel" name="label_4">
+            <property name="text">
+             <string>l_max = </string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="lineEdit_lmax"/>
+          </item>
+          <item row="2" column="2">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>in reverse Angstrom</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="2">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>max 50</string>
+            </property>
+           </widget>
+          </item>
+          <item row="4" column="3">
            <widget class="QPushButton" name="pushButton_calcSaxs">
             <property name="text">
              <string>Calculate SAXS curve</string>
@@ -192,30 +233,23 @@
        <item>
         <widget class="QGroupBox" name="groupBox_pointsView">
          <property name="title">
-          <string>points model view</string>
+          <string>Points Model View</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_6">
           <item row="0" column="0" colspan="2">
            <widget class="QGraphicsView" name="graphicsView_pointsModel"/>
           </item>
-          <item row="1" column="0">
-           <widget class="QComboBox" name="comboBox_choosePointsFileType">
-            <item>
-             <property name="text">
-              <string>PDB file</string>
-             </property>
-            </item>
-            <item>
-             <property name="text">
-              <string>xyz file</string>
-             </property>
-            </item>
-           </widget>
-          </item>
           <item row="1" column="1">
            <widget class="QPushButton" name="pushButton_savePointsFile">
             <property name="text">
-             <string>Save</string>
+             <string>Save PDB File</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="0">
+           <widget class="QLabel" name="label_pointsNum">
+            <property name="text">
+             <string>*** points</string>
             </property>
            </widget>
           </item>
@@ -225,13 +259,13 @@
        <item>
         <widget class="QGroupBox" name="groupBox_saxsPlot">
          <property name="title">
-          <string>SAXS plot</string>
+          <string>SAXS Plot</string>
          </property>
          <layout class="QGridLayout" name="gridLayout_3">
           <item row="1" column="0">
            <widget class="QPushButton" name="pushButton_saveSaxsPlot">
             <property name="text">
-             <string>Save SAXS plot</string>
+             <string>Save SAXS Plot</string>
             </property>
            </widget>
           </item>
@@ -241,7 +275,7 @@
           <item row="1" column="1">
            <widget class="QPushButton" name="pushButton_saveSaxsData">
             <property name="text">
-             <string>Save SAXS data file</string>
+             <string>Save SAXS Data File</string>
             </property>
            </widget>
           </item>
