--- a/ui_file/Model2SAS_UI.ui
+++ b/ui_file/Model2SAS_UI.ui
@@ -134,8 +134,8 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="lineEdit_interval"/>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="lineEdit_lmax"/>
           </item>
           <item row="0" column="3">
            <widget class="QPushButton" name="pushButton_genPointsInModel">
@@ -144,10 +144,10 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="0">
-           <widget class="QLabel" name="label_3">
+          <item row="4" column="3">
+           <widget class="QPushButton" name="pushButton_calcSaxs">
             <property name="text">
-             <string>points interval = </string>
+             <string>Calculate SAXS curve</string>
             </property>
            </widget>
           </item>
@@ -168,10 +168,27 @@
             </property>
            </widget>
           </item>
+          <item row="4" column="2">
+           <widget class="QLabel" name="label_6">
+            <property name="text">
+             <string>max 50</string>
+            </property>
+           </widget>
+          </item>
           <item row="2" column="0">
            <widget class="QLabel" name="label_2">
             <property name="text">
              <string>Q_max = </string>
+            </property>
+           </widget>
+          </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QLineEdit" name="lineEdit_interval"/>
+          </item>
+          <item row="2" column="2">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>in reverse Angstrom</string>
             </property>
            </widget>
           </item>
@@ -185,31 +202,33 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
-           <widget class="QLineEdit" name="lineEdit_lmax"/>
-          </item>
-          <item row="2" column="2">
-           <widget class="QLabel" name="label_5">
+          <item row="0" column="0">
+           <widget class="QLabel" name="label_3">
             <property name="text">
-             <string>in reverse Angstrom</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="2">
-           <widget class="QLabel" name="label_6">
-            <property name="text">
-             <string>max 50</string>
-            </property>
-           </widget>
-          </item>
-          <item row="4" column="3">
-           <widget class="QPushButton" name="pushButton_calcSaxs">
-            <property name="text">
-             <string>Calculate SAXS curve</string>
+             <string>points interval = </string>
             </property>
            </widget>
           </item>
          </layout>
+        </widget>
+       </item>
+       <item>
+        <widget class="QProgressBar" name="progressBar">
+         <property name="maximum">
+          <number>100</number>
+         </property>
+         <property name="value">
+          <number>-1</number>
+         </property>
+         <property name="textVisible">
+          <bool>false</bool>
+         </property>
+         <property name="invertedAppearance">
+          <bool>false</bool>
+         </property>
+         <property name="format">
+          <string>%p%</string>
+         </property>
         </widget>
        </item>
       </layout>
