--- a/ui_file/Model2SAS_UI.ui
+++ b/ui_file/Model2SAS_UI.ui
@@ -17,7 +17,7 @@
    </font>
   </property>
   <property name="windowTitle">
-   <string>MainWindow</string>
+   <string>Model2SAS</string>
   </property>
   <widget class="QWidget" name="centralwidget">
    <layout class="QHBoxLayout" name="horizontalLayout" stretch="1,1">
@@ -134,8 +134,15 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="1">
-           <widget class="QLineEdit" name="lineEdit_lmax"/>
+          <item row="2" column="2">
+           <widget class="QLabel" name="label_5">
+            <property name="text">
+             <string>in reverse Angstrom</string>
+            </property>
+           </widget>
+          </item>
+          <item row="2" column="1">
+           <widget class="QLineEdit" name="lineEdit_Qmax"/>
           </item>
           <item row="0" column="3">
            <widget class="QPushButton" name="pushButton_genPointsInModel">
@@ -144,12 +151,8 @@
             </property>
            </widget>
           </item>
-          <item row="4" column="3">
-           <widget class="QPushButton" name="pushButton_calcSaxs">
-            <property name="text">
-             <string>Calculate SAXS curve</string>
-            </property>
-           </widget>
+          <item row="4" column="1">
+           <widget class="QLineEdit" name="lineEdit_lmax"/>
           </item>
           <item row="1" column="0">
            <widget class="QCheckBox" name="checkBox_useCrysol">
@@ -158,13 +161,6 @@
             </property>
             <property name="checked">
              <bool>false</bool>
-            </property>
-           </widget>
-          </item>
-          <item row="1" column="1" colspan="2">
-           <widget class="QLabel" name="label_crysolPath">
-            <property name="text">
-             <string>choose Crysol path</string>
             </property>
            </widget>
           </item>
@@ -182,19 +178,6 @@
             </property>
            </widget>
           </item>
-          <item row="0" column="1" colspan="2">
-           <widget class="QLineEdit" name="lineEdit_interval"/>
-          </item>
-          <item row="2" column="2">
-           <widget class="QLabel" name="label_5">
-            <property name="text">
-             <string>in reverse Angstrom</string>
-            </property>
-           </widget>
-          </item>
-          <item row="2" column="1">
-           <widget class="QLineEdit" name="lineEdit_Qmax"/>
-          </item>
           <item row="4" column="0">
            <widget class="QLabel" name="label_4">
             <property name="text">
@@ -202,10 +185,34 @@
             </property>
            </widget>
           </item>
+          <item row="0" column="1" colspan="2">
+           <widget class="QLineEdit" name="lineEdit_interval"/>
+          </item>
+          <item row="4" column="3">
+           <widget class="QPushButton" name="pushButton_calcSaxs">
+            <property name="text">
+             <string>Calculate SAXS curve</string>
+            </property>
+           </widget>
+          </item>
+          <item row="1" column="1" colspan="2">
+           <widget class="QLabel" name="label_crysolPath">
+            <property name="text">
+             <string>choose Crysol path</string>
+            </property>
+           </widget>
+          </item>
           <item row="0" column="0">
            <widget class="QLabel" name="label_3">
             <property name="text">
              <string>points interval = </string>
+            </property>
+           </widget>
+          </item>
+          <item row="5" column="3">
+           <widget class="QPushButton" name="pushBotton_clear">
+            <property name="text">
+             <string>Clear All</string>
             </property>
            </widget>
           </item>
