--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -40,10 +40,10 @@
      <string>File</string>
     </property>
     <addaction name="actionNew_Project"/>
-    <addaction name="actionLoad"/>
     <addaction name="actionSave"/>
     <addaction name="separator"/>
     <addaction name="actionImport_model_s"/>
+    <addaction name="actionDelete_all_models"/>
    </widget>
    <widget class="QMenu" name="menuView">
     <property name="title">
@@ -72,13 +72,6 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="1" column="0" colspan="2">
-      <widget class="QLabel" name="label_projectName">
-       <property name="text">
-        <string>Project_name</string>
-       </property>
-      </widget>
-     </item>
      <item row="0" column="0" colspan="2">
       <widget class="QPushButton" name="pushButton_importModels">
        <property name="text">
@@ -86,37 +79,37 @@
        </property>
       </widget>
      </item>
-     <item row="6" column="0" colspan="2">
+     <item row="8" column="0" colspan="2">
       <widget class="QPushButton" name="pushButton_deleteModel">
        <property name="text">
         <string>delete model</string>
        </property>
       </widget>
      </item>
-     <item row="2" column="0" colspan="2">
+     <item row="4" column="0" colspan="2">
       <widget class="QTableView" name="tableView_stlmodels"/>
      </item>
-     <item row="7" column="0" colspan="2">
-      <widget class="QPushButton" name="pushButton_clearAll">
-       <property name="text">
-        <string>clear all</string>
-       </property>
-      </widget>
-     </item>
-     <item row="5" column="1">
+     <item row="7" column="1">
       <widget class="QPushButton" name="pushButton_showMathmodel">
        <property name="text">
         <string>show math model</string>
        </property>
       </widget>
      </item>
-     <item row="4" column="0" colspan="2">
+     <item row="6" column="0" colspan="2">
       <widget class="QTableView" name="tableView_mathmodels"/>
      </item>
-     <item row="3" column="1">
+     <item row="5" column="1">
       <widget class="QPushButton" name="pushButton_showStlmodels">
        <property name="text">
         <string>show stl model(s)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="1" column="0" colspan="2">
+      <widget class="QLabel" name="label_projectName">
+       <property name="text">
+        <string>Project: New Project</string>
        </property>
       </widget>
      </item>
@@ -181,6 +174,11 @@
   <action name="actionNew_Project">
    <property name="text">
     <string>New Project</string>
+   </property>
+  </action>
+  <action name="actionDelete_all_models">
+   <property name="text">
+    <string>Delete all models</string>
    </property>
   </action>
  </widget>
