--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -128,6 +128,16 @@
      <item>
       <widget class="QTextEdit" name="textEdit"/>
      </item>
+     <item>
+      <widget class="QProgressBar" name="progressBar">
+       <property name="maximum">
+        <number>100</number>
+       </property>
+       <property name="value">
+        <number>-1</number>
+       </property>
+      </widget>
+     </item>
     </layout>
    </widget>
   </widget>
