--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -65,41 +65,41 @@
    </attribute>
    <widget class="QWidget" name="dockWidgetContents">
     <layout class="QGridLayout" name="gridLayout">
-     <item row="0" column="0" colspan="2">
-      <widget class="QPushButton" name="pushButton_importModels">
-       <property name="text">
-        <string>import model(s)</string>
-       </property>
-      </widget>
-     </item>
-     <item row="8" column="0" colspan="2">
-      <widget class="QPushButton" name="pushButton_deleteModel">
-       <property name="text">
-        <string>delete model</string>
-       </property>
-      </widget>
-     </item>
-     <item row="4" column="0" colspan="2">
+     <item row="1" column="0" colspan="2">
       <widget class="QTableView" name="tableView_stlmodels"/>
      </item>
-     <item row="7" column="1">
+     <item row="1" column="2" colspan="2">
+      <widget class="QTableView" name="tableView_mathmodels"/>
+     </item>
+     <item row="2" column="3">
       <widget class="QPushButton" name="pushButton_showMathmodel">
        <property name="text">
         <string>show math model</string>
        </property>
       </widget>
      </item>
-     <item row="6" column="0" colspan="2">
-      <widget class="QTableView" name="tableView_mathmodels"/>
-     </item>
-     <item row="5" column="1">
+     <item row="2" column="1">
       <widget class="QPushButton" name="pushButton_showStlmodels">
        <property name="text">
         <string>show stl model(s)</string>
        </property>
       </widget>
      </item>
-     <item row="1" column="0" colspan="2">
+     <item row="0" column="3">
+      <widget class="QPushButton" name="pushButton_deleteModel">
+       <property name="text">
+        <string>delete selected model</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="2">
+      <widget class="QPushButton" name="pushButton_importModels">
+       <property name="text">
+        <string>import model(s)</string>
+       </property>
+      </widget>
+     </item>
+     <item row="0" column="0" colspan="2">
       <widget class="QLabel" name="label_projectName">
        <property name="text">
         <string>Project: New Project</string>
@@ -160,13 +160,6 @@
           </property>
          </widget>
         </item>
-        <item row="1" column="0">
-         <widget class="QLabel" name="label_2">
-          <property name="text">
-           <string>OR interval</string>
-          </property>
-         </widget>
-        </item>
         <item row="1" column="1" colspan="2">
          <widget class="QLineEdit" name="lineEdit_interval"/>
         </item>
@@ -181,6 +174,13 @@
          <widget class="QLabel" name="label">
           <property name="text">
            <string>grid points number</string>
+          </property>
+         </widget>
+        </item>
+        <item row="1" column="0">
+         <widget class="QLabel" name="label_2">
+          <property name="text">
+           <string>OR interval</string>
           </property>
          </widget>
         </item>
@@ -358,6 +358,7 @@
     <string>Delete all models</string>
    </property>
   </action>
+  <zorder>dockWidget_controlPanel</zorder>
  </widget>
  <resources/>
  <connections/>
