--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -264,11 +264,14 @@
         </item>
         <item row="4" column="0">
          <widget class="QCheckBox" name="checkBox_parallel">
+          <property name="enabled">
+           <bool>true</bool>
+          </property>
           <property name="text">
            <string>parallel</string>
           </property>
           <property name="checked">
-           <bool>true</bool>
+           <bool>false</bool>
           </property>
          </widget>
         </item>
@@ -282,7 +285,7 @@
         <item row="6" column="1">
          <widget class="QLineEdit" name="lineEdit_cpuUsage">
           <property name="text">
-           <string>0.6</string>
+           <string>0.4</string>
           </property>
          </widget>
         </item>
