--- a/qtgui/mainwindow.ui
+++ b/qtgui/mainwindow.ui
@@ -40,6 +40,8 @@
      <string>File</string>
     </property>
     <addaction name="actionNew_Project"/>
+    <addaction name="actionLoad_project"/>
+    <addaction name="separator"/>
     <addaction name="actionSave_project"/>
     <addaction name="actionSave_points_model"/>
     <addaction name="actionSave_SAS_curve"/>
@@ -371,6 +373,11 @@
   <action name="actionSave_SAS_curve">
    <property name="text">
     <string>Save SAS curve</string>
+   </property>
+  </action>
+  <action name="actionLoad_project">
+   <property name="text">
+    <string>Load project</string>
    </property>
   </action>
   <zorder>dockWidget_controlPanel</zorder>
