--- a/qtgui/mathmodelView.ui
+++ b/qtgui/mathmodelView.ui
@@ -20,8 +20,28 @@
    <string>math model view</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
-   <item row="0" column="0">
+   <item row="0" column="0" colspan="2">
     <widget class="QGraphicsView" name="graphicsView"/>
+   </item>
+   <item row="1" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>40</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pushButton_saveFigure">
+     <property name="text">
+      <string>Save figure</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
