--- a/qtgui/pointsWithSldView.ui
+++ b/qtgui/pointsWithSldView.ui
@@ -13,14 +13,21 @@
   <property name="windowTitle">
    <string>All Points with SLD</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="3">
     <widget class="QGraphicsView" name="graphicsView"/>
    </item>
-   <item>
+   <item row="1" column="0">
     <widget class="QLabel" name="label_interval">
      <property name="text">
       <string>interval = </string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="2">
+    <widget class="QPushButton" name="pushButton_saveFigure">
+     <property name="text">
+      <string>Save figure</string>
      </property>
     </widget>
    </item>
