--- a/qtgui/stlmodelView.ui
+++ b/qtgui/stlmodelView.ui
@@ -19,9 +19,29 @@
   <property name="windowTitle">
    <string>stl model view</string>
   </property>
-  <layout class="QVBoxLayout" name="verticalLayout">
-   <item>
+  <layout class="QGridLayout" name="gridLayout">
+   <item row="0" column="0" colspan="2">
     <widget class="QGraphicsView" name="graphicsView"/>
+   </item>
+   <item row="1" column="0">
+    <spacer name="horizontalSpacer">
+     <property name="orientation">
+      <enum>Qt::Horizontal</enum>
+     </property>
+     <property name="sizeHint" stdset="0">
+      <size>
+       <width>355</width>
+       <height>20</height>
+      </size>
+     </property>
+    </spacer>
+   </item>
+   <item row="1" column="1">
+    <widget class="QPushButton" name="pushButton_saveFigure">
+     <property name="text">
+      <string>Save figure</string>
+     </property>
+    </widget>
    </item>
   </layout>
  </widget>
