--- a/qtgui/plotView.ui
+++ b/qtgui/plotView.ui
@@ -1,7 +1,7 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <ui version="4.0">
- <class>pointsWithSldView</class>
- <widget class="QWidget" name="pointsWithSldView">
+ <class>plotView</class>
+ <widget class="QWidget" name="plotView">
   <property name="geometry">
    <rect>
     <x>0</x>
@@ -11,23 +11,23 @@
    </rect>
   </property>
   <property name="windowTitle">
-   <string>All Points with SLD</string>
+   <string>Plot View</string>
   </property>
   <layout class="QGridLayout" name="gridLayout">
    <item row="0" column="0" colspan="3">
     <widget class="QGraphicsView" name="graphicsView"/>
    </item>
-   <item row="1" column="0">
-    <widget class="QLabel" name="label_interval">
-     <property name="text">
-      <string>interval = </string>
-     </property>
-    </widget>
-   </item>
    <item row="1" column="2">
     <widget class="QPushButton" name="pushButton_saveFigure">
      <property name="text">
       <string>Save figure</string>
+     </property>
+    </widget>
+   </item>
+   <item row="1" column="0" colspan="2">
+    <widget class="QLabel" name="label_text">
+     <property name="text">
+      <string>interval = </string>
      </property>
     </widget>
    </item>
