--- a/qtgui/MainWindow.ui
+++ b/qtgui/MainWindow.ui
@@ -71,8 +71,15 @@
     </property>
     <addaction name="action_configureGpu"/>
    </widget>
+   <widget class="QMenu" name="menuTools">
+    <property name="title">
+     <string>Tools</string>
+    </property>
+    <addaction name="action_mathModelGeneration"/>
+   </widget>
    <addaction name="menuFile"/>
    <addaction name="menuOptions"/>
+   <addaction name="menuTools"/>
    <addaction name="menuWindows"/>
   </widget>
   <widget class="QStatusBar" name="statusbar"/>
@@ -418,6 +425,11 @@
   <action name="action_showSelectedModels">
    <property name="text">
     <string>Show selected model(s)</string>
+   </property>
+  </action>
+  <action name="action_mathModelGeneration">
+   <property name="text">
+    <string>Generate math model</string>
    </property>
   </action>
   <zorder>dockWidget_controlPanel</zorder>
